style.css
body {
    background: #696969;
    color: silver;
    font-family: 'Roboto', sans-serif;
}

h1, h2 {
    color: #DC143C;
    font-family: 'Shadows Into Light', cursive;
    text-align: center;
}

img {
    height: 150px;
    width: 100px;
}

.intro {
    text-align: center;
}

.menu {
    text-align: right; 
    display: flex;
    width: 100%;
    min-width: 320px;
    background-color: black;
    justify-content: space-between;
    margin: 10px auto;
    border: 2px solid gold;
}

ul {
    font-size: smaller;
    align-content: center;
    margin: 10px;
}

li {
    display: none;
}

.menu ul li {
    transition: background-color .5s, color .5s;
}

.menu ul li:hover {
    background-color: #dc143c;
    color: white;
}

.hamburger {
    color: gold;
    font-size: 24px;
}

p {
    text-align: center;
    font-size: 16px;
}

.resume {
    text-align: right;
}

iframe {
    width: 250px;
    height: 400px;
    position: relative;
    margin: 0 auto;
    display: inline-flex;
    top: 200px;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

a {
    display: inline;
}



h4 {
    font-family: 'Roboto', sans-serif;
    text-align: center;
    color: #E4303D;
}

.projects-section {
    display: flex;
    flex-direction: column;
    /*border: 2px solid gold;*/
}

.project-images {
    width: 80%;
    display: flex;
    margin: 10%;
    /*border: 2px solid gold;*/
}

.skills {
    text-align: center;
    /*border: 2px solid gold;*/
    margin: 0 auto;
    height: 500px;
    width: 300px;
    grid-template-areas:
    "language-header" 
    "languages"
    "frontend-framework-header"
    "frontend-framework"
    "backend-database-header"
    "backend-and-databases"
    "knowledge-header"
    "knowledge"
    "other-header"
    "other";
}

.language-header {
    grid-area: language-header;
}

.frontend-framework-header{
    grid-area: frontend-framework-header;
}

.backend-database-header{
    grid-area: backend-database-header;
}

.knowledge-header{
    grid-area: knowledge-header;
}

.other-header {
    grid-area: software-header;
}

.languages {
    grid-area: languages;
    /*border: gold;*/
}

.frontend-frameworks {
    grid-area: frontend-frameworks;
}

.backend-and-databases { 
    grid-area: backend-and-databases;
}

.knowledge {
    grid-area: knowledge;
}

.other {
    grid-area: software;
    /*border: gold;*/
}

footer {
    background-color: black;
    border: 3px solid gold;
    height: 50px;
}

.footer {
    text-align: left;
}

@media (min-width: 992px) {
    .hamburger {
        display: none;
    }
    ul {
        font-size: smaller;
        align-content: center;
        margin: 10px;
    }
    
    ul, li {
        display: flex;
        justify-content: space-around;
        align-content: center;
        margin: 3px;
    }

    li {
        cursor: pointer;
    }
    
    p {
        text-align: center;
        font-size: 24px;
    }

    h2 {
        background-color: black;
        border: 3px solid gold;
    }

    iframe {
        width: 700px;
        height: 400px;
        position: relative;
        margin: 0 auto;
        display: inline-flex;
        top: 200px;
        left: 50%;
        -ms-transform: translate(-50%, -50%);
        transform: translate(-50%, -50%);
    }

    a {
        cursor: pointer;
    }

    .projects-section {
        display: flex;        
        flex-direction: row;
        flex-wrap: wrap;
    }
    
    .project-images {
        height: 100px;
        width: 300px;
        display: flex;
        flex-direction: row;
        border: 2px solid gold;
    }
    
    .project-description {
        width: 300px;
        margin: 21px;
    }

    .project-link {
        cursor: pointer;
    }

    .project-repo {
        width: 300px;
        margin: 21px;
        cursor: pointer;
    }

    .skills {
       width: 800px;
       display: grid;
       grid-template-areas: 
       "language-header frontend-framework-header backend-database-header knowledge-header other-header"
       "languages frontend-frameworks backend-and-databases knowledge other";
    }

    .language-header {
        grid-area: language-header;
    }

    .frontend-framework-header{
        grid-area: frontend-framework-header;
    }
    
    .backend-database-header{
        grid-area: backend-database-header;
    }
    
    .knowledge-header{
        grid-area: knowledge-header;
    }

    .other-header {
        grid-area: other-header;
    }
    
    .languages {
        grid-area: languages;
        display: flex;
        flex-direction: column;
    }

    .frontend-frameworks {
        grid-area: frontend-frameworks;
        display: flex;
        flex-direction: column;
    }
    
    .backend-and-databases { 
        grid-area: backend-and-databases;
        display: flex;
        flex-direction: column;
    }
    
    .knowledge {
        grid-area: knowledge;
        display: flex;
        flex-direction: column;
    }

    .other {
        grid-area: other;
        display: flex;
        flex-direction: column;
    }
}

@media (min-width: 768px) and (max-width: 991px) {
    .hamburger {
        display: none;
    }
    ul {
        font-size: smaller;
        align-content: center;
        margin: 10px;
    }
    
    ul, li {
        display: flex;
        justify-content: space-around;
        align-content: center;
        margin: 3px;
    }
    p {
        text-align: center;
        font-size: 18px;
    }

    iframe {
        width: 500px;
        height: 400px;
        position: relative;
        margin: 0 auto;
        display: inline-flex;
        top: 200px;
        left: 50%;
        -ms-transform: translate(-50%, -50%);
        transform: translate(-50%, -50%);
    }
    .projects-section {
        display: flex;        
        flex-direction: row;
        flex-wrap: wrap;
        max-width: 720px;
    }
    
    .project-images {
        height: 100px;
        width: 240px;
        display: flex;
        flex-direction: row;
    }
    
    .project-description {
        width: 40%;
        margin: 10px 5%;
    }

    .project-repo {
        width: 40%;
        margin: 10px 5%;
        cursor: pointer;
    }
}

